--- a/src/index.html
+++ b/src/index.html
@@ -2,15 +2,19 @@
 <html lang="en" class="light-theme">
 <head>
   <meta charset="utf-8">
-  <title>Game</title>
+  <title>GameStore</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="icon.png">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   
   <!-- Estilos inline para asegurar que el tema se aplique correctamente -->
   <style>
     /* Estilos base para tema claro */
     body {
+      font-family: 'Inter', sans-serif;
+      margin: 0;
+      padding: 0;
       background-color: #f5f5f7;
       color: #1a1a2e;
       transition: background-color 0.3s ease, color 0.3s ease;
